# opencv_camera_cmake

./: CMakeLists.txt
include/: NvAnalysis.h
scripts/: checkerboard.py  proc_raw.py  v4l2-ctl-capture-raw.sh
src/: NvAnalysis.cu  main.cpp
